--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,20 @@
   <name>BancoDeDados Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
-<dependencies>
+  <dependencies>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>7.0.2</version>
+    </dependency>
+
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
